Optimize the project structure